BUG: found a bug where a single label would over ride generate all for some settings, resulting in a filter not being instantiated when it was assumed to have been. Fixed the logic and added a test for it
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15296 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/Testing/CMakeLists.txt
+++ b/Applications/CLI/Testing/CMakeLists.txt
@@ -823,6 +823,15 @@ add_test(ModelMakerLabelsTest ${Launcher_Command} ${TestLocation}ModelMakerTest
     --modelSceneFile ${TEMP}/ModelMakerTest.mrml\#vtkMRMLModelHierarchyNode1
     ${MRML_TEST_DATA}/helixMask3Labels.nrrd
   )
+# make sure that a left over label doesn't interfere with generate all and joint smoothing
+add_test(ModelMakerJointSmoothTest ${Launcher_Command} ${TestLocation}ModelMakerTest
+  ModelMakerTest
+    --labels 3
+    --generateAll
+    --jointsmooth
+    --modelSceneFile ${TEMP}/ModelMakerTest.mrml\#vtkMRMLModelHierarchyNode1
+    ${MRML_TEST_DATA}/helixMask3Labels.nrrd
+  )
 set (CLP ModelMaker)
 add_executable(${CLP}Test ${CLP}Test.cxx)
 add_dependencies(${CLP}Test ${CLP})
