BUG: Do avoid downloading data from web we now store the data in repository - will hopefully  be changed for Slicer 3.6.3. release
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15366 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -65,7 +65,7 @@ install(
 )
 
 
-file(GLOB TASKFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "Tasks/*.tcl" "Tasks/*.mrml" )
+file(GLOB TASKFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "Tasks/*.tcl" "Tasks/*.mrml" "Tasks/*.nrrd" )
 
 foreach(file ${TASKFILES})
  configure_file(
@@ -78,12 +78,6 @@ install(
   FILES ${TASKFILES}
   DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/Tasks
 )
-
-install(
-  FILES ${TASKFILES}
-  DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/Tasks
-)
-
 
 install(FILES 
   ${headers} 
