ENH: switch to add_subdirectory
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15370 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/Pharmacokinetics/CMakeLists.txt
+++ b/Modules/Pharmacokinetics/CMakeLists.txt
@@ -25,7 +25,7 @@ endif(NOT Slicer3_SOURCE_DIR)
 
 #-------------------------------------------------------------------
 # PkSolver is in a separate directory
-subdirs(PkSolver)
+add_subdirectory(PkSolver)
 
 # --------------------------------------------------------------------------
 # Include dirs
