ENH: put library with modules
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15371 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/Pharmacokinetics/PkSolver/CMakeLists.txt
+++ b/Modules/Pharmacokinetics/PkSolver/CMakeLists.txt
@@ -1,6 +1,7 @@
 Project(PkSolver)
 
 ADD_LIBRARY( PkSolver PkSolver.cxx )
+slicer3_set_modules_output_path(PkSolver)
 
 TARGET_LINK_LIBRARIES( PkSolver ITKBasicFilters ITKCommon ITKIO ITKNumerics )
 
@@ -11,4 +12,6 @@ install(TARGETS PkSolver
   LIBRARY DESTINATION ${Slicer3_INSTALL_MODULES_LIB_DIR} COMPONENT RuntimeLibraries
   ARCHIVE DESTINATION ${Slicer3_INSTALL_MODULES_LIB_DIR} COMPONENT Development
   )
+
+slicer3_install_modules(PkSolver)
 
