BUG: bug fix for 1038, merge from 3-6, fixed by Steve
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15432 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -1093,6 +1093,12 @@ proc launch_ImportModulePaths {} {
       return
     }
 
+    # sanity check output from slicer executable
+    # if the strings are not a valid set of paths, bail out
+    if { [catch "foreach line $::globallines {}"] } {
+      return
+    }
+
     # 
     # find just the line that has the actual path in it the one that contains \@SVN\@
     # - ignore other lines that might be error messages or diagnotics
