ENH: Prevent recompilation of the whole ProstateNav module when the working copy is updated (only one file is still recompiled, to embed the working copy revision information)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15438 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/ProstateNav/CMakeLists.txt
+++ b/Modules/ProstateNav/CMakeLists.txt
@@ -59,6 +59,10 @@ configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/vtkProstateNavConfigure.h.in 
   ${CMAKE_CURRENT_BINARY_DIR}/vtkProstateNavConfigure.h
   )
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/vtkProstateNavVersion.h.in 
+  ${CMAKE_CURRENT_BINARY_DIR}/vtkProstateNavVersion.h
+  )
 
 #
 # Installation
