BUG: fix for bug 1000 - make sure dicom files are sorted by slice location
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15459 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/vtkITK/Testing/CMakeLists.txt
+++ b/Libs/vtkITK/Testing/CMakeLists.txt
@@ -38,3 +38,9 @@ TARGET_LINK_LIBRARIES (VTKITKBSplineTransform
   vtkITK)
 ADD_TEST (VTKITKBSplineTransform
   ${Slicer3_EXE} --launch ${WRAPPED_EXE_PREFIX}/VTKITKBSplineTransform)
+
+ADD_EXECUTABLE (VTKITKArchetypeTest vtkITKArchetypeImageSeriesReaderTest.cxx)
+TARGET_LINK_LIBRARIES (VTKITKArchetypeTest
+  vtkITK)
+ADD_TEST (VTKITKArchetypeTest
+  ${Slicer3_EXE} --launch ${WRAPPED_EXE_PREFIX}/VTKITKArchetypeTest ${Slicer3_SOURCE_DIR}/Testing/Data/Input/DCE_single_serie)
