BUG: Add whole Tasks directory to install target
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15496 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -73,6 +73,12 @@ install(
 #    ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/${file}
 #    COPYONLY)
 #endforeach(file)
+#
+#install(
+#  FILES ${TASKFILES}
+#  DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/Tasks
+#)
+
 
 file(COPY Tasks
   DESTINATION ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/
@@ -80,8 +86,9 @@ file(COPY Tasks
 )
 
 install(
-  FILES ${TASKFILES}
-  DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/Tasks
+  DIRECTORY Tasks
+  DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/
+  FILES_MATCHING PATTERN "*"
 )
 
 install(FILES 
