--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -64,21 +64,20 @@ install(
   DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/Tcl
 )
 
-## this code will be replaced by the cmake command 'file(COPY ....)' below 
-#file(GLOB TASKFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "Tasks/*.tcl" "Tasks/*.mrml" "Tasks/*.nrrd" )
-#
-#foreach(file ${TASKFILES})
-# configure_file(
-#    ${CMAKE_CURRENT_SOURCE_DIR}/${file}
-#    ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/${file}
-#    COPYONLY)
-#endforeach(file)
+### this code will be replaced by the cmake command 'file(COPY ....)' below 
+file(GLOB TASKFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "Tasks/*.tcl" "Tasks/*.mrml")
+foreach(file ${TASKFILES})
+ configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/${file}
+    ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/${file}
+    COPYONLY)
+endforeach(file)
 #
 #install(
 #  FILES ${TASKFILES}
 #  DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/Tasks
 #)
-
+###
 
 file(COPY Tasks
   DESTINATION ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/
