--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -227,6 +227,10 @@ proc launch_SetEnvironment {} {
       set ::env(OpenIGTLink_DIR)      $::env(Slicer3_HOME)/lib/OpenIGTLink
       set ::env(OpenIGTLink_LIB_DIR)  $::env(Slicer3_HOME)/lib/OpenIGTLink
       set ::env(OpenIGTLink_BIN_DIR)  $::env(Slicer3_HOME)/bin
+
+      set ::env(OpenCV_DIR)         $::env(Slicer3_HOME)/lib/OpenCV
+      set ::env(OpenCV_LIB_DIR)     $::env(Slicer3_HOME)/lib/OpenCV
+      set ::env(OpenCV_BIN_DIR)     $::env(Slicer3_HOME)/bin
     
       set ::env(BatchMake_DIR)      $::env(Slicer3_HOME)/lib/BatchMake
       set ::env(BatchMake_LIB_DIR)  $::env(Slicer3_HOME)/lib/BatchMake
@@ -284,6 +288,7 @@ proc launch_SetEnvironment {} {
       set ::ITK_BUILD_SUBDIR  ""
       set ::Teem_BUILD_SUBDIR  ""
       set ::OpenIGTLink_BUILD_SUBDIR  ""
+      set ::OpenCV_BUILD_SUBDIR  ""
       set ::BatchMake_BUILD_SUBDIR  ""
       set ::QtDesignerPlugins_BUILD_SUBDIR  ""
     
@@ -309,6 +314,9 @@ proc launch_SetEnvironment {} {
           }
           if { [file exists "@OpenIGTLink_DIR@/bin/$buildType/OpenIGTLink.dll"] } {
             set ::OpenIGTLink_BUILD_SUBDIR $buildType
+          }
+          if { [file exists "@OpenCV_DIR@/bin/$buildType/cv.dll"] } {
+            set ::OpenCV_BUILD_SUBDIR $buildType
           }
           if { [file exists "@BatchMake_DIR@/bin/$buildType/BatchMake.dll"] } {
             set ::BatchMake_BUILD_SUBDIR $buildType
@@ -374,6 +382,10 @@ proc launch_SetEnvironment {} {
       set ::env(OpenIGTLink_DIR)      [file normalize "@OpenIGTLink_DIR@"]
       set ::env(OpenIGTLink_LIB_DIR)  [file normalize "@OpenIGTLink_DIR@/bin/$::OpenIGTLink_BUILD_SUBDIR"]
       set ::env(OpenIGTLink_BIN_DIR)  [file normalize "@OpenIGTLink_DIR@/bin/$::OpenIGTLink_BUILD_SUBDIR"]
+
+      set ::env(OpenCV_DIR)         [file normalize "@OpenCV_DIR@"]
+      set ::env(OpenCV_LIB_DIR)     [file normalize "@OpenCV_DIR@/bin/$::OpenCV_BUILD_SUBDIR"]
+      set ::env(OpenCV_BIN_DIR)     [file normalize "@OpenCV_DIR@/bin/$::OpenCV_BUILD_SUBDIR"]
     
       set ::env(BatchMake_DIR)      [file normalize "@BatchMake_DIR@"]
       set ::env(BatchMake_LIB_DIR)  [file normalize "@BatchMake_DIR@/bin/$::BatchMake_BUILD_SUBDIR"]
@@ -555,6 +567,7 @@ proc launch_SetPaths {} {
             set ::env(LD_LIBRARY_PATH) $::env(KWWidgets_LIB_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(QT_LIB_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(OpenIGTLink_LIB_DIR):$::env(LD_LIBRARY_PATH)
+            set ::env(LD_LIBRARY_PATH) $::env(OpenCV_LIB_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(BatchMake_LIB_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(bmModuleDescriptionParser_DIR):$::env(LD_LIBRARY_PATH)
             set ::env(LD_LIBRARY_PATH) $::env(ITK_BIN_DIR):$::env(LD_LIBRARY_PATH)
@@ -605,6 +618,7 @@ proc launch_SetPaths {} {
             set ::env(DYLD_LIBRARY_PATH) $::env(KWWidgets_LIB_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(QT_LIB_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(OpenIGTLink_LIB_DIR):$::env(DYLD_LIBRARY_PATH)
+            set ::env(DYLD_LIBRARY_PATH) $::env(OpenCV_LIB_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(BatchMake_LIB_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(bmModuleDescriptionParser_DIR):$::env(DYLD_LIBRARY_PATH)
             set ::env(DYLD_LIBRARY_PATH) $::env(ITK_BIN_DIR):$::env(DYLD_LIBRARY_PATH)
@@ -652,6 +666,7 @@ proc launch_SetPaths {} {
             set ::env(Path) $::env(KWWidgets_BIN_DIR)\;$::env(Path)
             set ::env(Path) $::env(QT_LIB_DIR)\;$::env(Path)
             set ::env(Path) $::env(OpenIGTLink_BIN_DIR)\;$::env(Path)
+            set ::env(Path) $::env(OpenCV_BIN_DIR)\;$::env(Path)
             set ::env(Path) $::env(BatchMake_BIN_DIR)\;$::env(Path)
             set ::env(Path) $::env(bmModuleDescriptionParser_DIR)\;$::env(Path)
             set ::env(Path) $::env(ITK_BIN_DIR)\;$::env(Path)
