BUG: add PolyDataToLabelmap cli to install list
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15543 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -803,6 +803,8 @@ if (Slicer3_SOURCE_DIR)
     GrayscaleModelMaker
     MergeModels
     MergeModelsLib
+    PolyDataToLabelmap
+    PolyDataToLabelmapLib
     GrayscaleFillHoleImageFilter
     GrayscaleFillHoleImageFilterLib
     GrayscaleGrindPeakImageFilter
