ENH: adding new features for OpenIGTLink version 2 (copied from Slicer3/oldtrunk)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15552 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/OpenIGTLinkIF/CMakeLists.txt
+++ b/Modules/OpenIGTLinkIF/CMakeLists.txt
@@ -19,6 +19,17 @@ endif(NOT Slicer3_SOURCE_DIR)
 
 
 # --------------------------------------------------------------------------
+# Check if version 2 protocol is available
+# Features that depnd on OpenIGTLink Protocol 2 are only available 
+# if the OpenIGTLink library is compiled with OpenIGTLink_PROTOCOL_VERSION_2
+# option.
+
+if (OpenIGTLink_PROTOCOL_VERSION_2)
+  ADD_DEFINITIONS(-DOpenIGTLinkIF_USE_VERSION_2)
+endif (OpenIGTLink_PROTOCOL_VERSION_2)
+
+
+# --------------------------------------------------------------------------
 # Include dirs
 
 include_directories(
@@ -62,6 +73,20 @@ set(OpenIGTLinkIF_SRCS
   vtkIGTLToMRMLPosition.cxx
   vtkMRMLIGTLConnectorNode.cxx
 )
+
+if (OpenIGTLink_PROTOCOL_VERSION_2)
+  set(OpenIGTLinkIF_SRCS 
+    vtkIGTLRemoteDataListWindow.cxx
+    vtkMRMLIGTLQueryNode.cxx
+    vtkMRMLImageMetaListNode.cxx
+    vtkIGTLToMRMLImageMetaList.cxx
+    #vtkMRMLIGTLImageMetaListQueryNode.cxx
+    vtkIGTLToMRMLTrackingData.cxx
+    vtkMRMLIGTLTrackingDataBundleNode.cxx
+    vtkIGTLTrackingDataControllerWindow.cxx
+    )
+endif (OpenIGTLink_PROTOCOL_VERSION_2)
+
 
 # --------------------------------------------------------------------------
 # Wrapping
