BUG: add custom target to copy EMSegmenter tasks from the source directory to the binary directory
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15589 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -79,9 +79,11 @@ endforeach(file)
 #)
 ###
 
-file(COPY Tasks
-  DESTINATION ${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/
-  PATTERN .svn EXCLUDE
+ADD_CUSTOM_TARGET(copytasks ALL
+  ${CMAKE_COMMAND}
+  -DSRC=${CMAKE_CURRENT_SOURCE_DIR}/Tasks
+  -DDST=${CMAKE_BINARY_DIR}/${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/
+  -P ${CMAKE_CURRENT_SOURCE_DIR}/copytasks.cmake
 )
 
 install(
