ENH: Added Vernoi Diagram - needed for Ron's parcellation
git-svn-id: http://svn.slicer.org/Slicer3/trunk@15604 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -148,6 +148,7 @@ set(EMSegment_SRCS
   ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/vtkSimonParameterReaderWriter.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/vtkTimeDef.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/vtkImageMeanIntensityNormalization.cxx
+  ${CMAKE_CURRENT_SOURCE_DIR}/Algorithm/vtkImageLabelPropagation.cxx 
   # Registration
   ${CMAKE_CURRENT_SOURCE_DIR}/Registration/vtkRigidRegistrator.cxx
   ${CMAKE_CURRENT_SOURCE_DIR}/Registration/vtkBSplineRegistrator.cxx
