--- a/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
+++ b/Modules/EMSegment/CMTK-Extension/CMakeLists.txt
@@ -26,9 +26,9 @@ message("######### CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 
 set(PROJECTNAME CMTK)
 ExternalProject_Add(${PROJECTNAME}
-  SVN_REPOSITORY "https://www.nitrc.org/svn/cmtk/trunk/core"
-#  SVN_USERNAME slicerbot
-#  SVN_PASSWORD slicer
+  SVN_REPOSITORY "https://www.nitrc.org/svn/cmtk/tags/Slicer3"
+  SVN_USERNAME slicerbot
+  SVN_PASSWORD slicer
   CMAKE_ARGS
     ${LOCAL_CMAKE_BUILD_OPTIONS}
     -DCMAKE_INSTALL_PREFIX:PATH=${CMTK_INSTALL_DIR}
@@ -56,5 +56,3 @@ install(
               GROUP_EXECUTE GROUP_READ
               WORLD_EXECUTE WORLD_READ
 )
-
-
